Tue Jan 17 01:50:24 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.cpp:
        * orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.h:

          Change type of property_lookup_ map from Any_var to Any, similar
          to what was done for the Notify_Constraint_Visitor some time
          ago.  This allows us to avoid dynamically allocating Anys in
          the constructor for increased performance and reliability.

          I've measured a ~10% performance boost from this change.

Mon Jan 16 17:57:53 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/AV.mpc

          Fixed a linking error on OS X.

Mon Jan 16 16:49:27 UTC 2006  Olli Savia  <ops@iki.fi>

        * tao/AnyTypeCode/SystemExceptionA.cpp:
        * tao/Exception.h:
        * tao/RTScheduling/Current.cpp:
        * tao/SystemException.h:
        * tao/SystemException.cpp:
        * tests/RTScheduling/Scheduling_Interceptor/test_client.cpp:
        * tests/RTScheduling/Thread_Cancel/Thread_Task.cpp:
          Get rid of ACE_HAS_PREDEFINED_THREAD_CANCELLED_MACRO.
          If macro THREAD_CANCELLED is defined we now simply undef it.

Mon Jan 16 14:17:47 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * tao/AnyTypeCode/Any_Special_Impl_T.cpp:

          Delete the stored memory in _tao_decode() before calling
          demarshal_value() to avoid leaking memory.

        * tao/RTScheduling/Current.h:
        * tao/RTScheduling/Current.cpp:
        * tao/RTScheduling/Distributable_Thread.h:
        * tao/RTScheduling/RTScheduler_Initializer.cpp:
        * tao/RTScheduling/Request_Interceptor.h:
        * tao/RTScheduling/Request_Interceptor.cpp:

          Corrected various misuses of memory management.

        * tests/CodeSets/simple/client.cpp:
        * tests/CodeSets/simple/server.cpp:

          Added memory cleanup code so these tests do not contribute to
          the memory leak list.
