@@ -3,9 +3,9 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: TAO_CosNaming_Serv
-Description: TAO CosNaming Service Library
-Requires: TAO_CosNaming_Skel, TAO_Messaging, TAO_Svc_Utils, TAO_CosNaming, TAO_DynamicInterface, TAO_IFR_Client
+Name: TAO_CosEvent_Serv
+Description: TAO CosEvent Service Library
+Requires: TAO_CosEvent_Skel, TAO_DynamicInterface, TAO_IFR_Client, TAO_Messaging, TAO_CosNaming, TAO_Svc_Utils
 Version: @VERSION@
-Libs: -L${libdir} -lTAO_CosNaming_Serv
+Libs: -L${libdir} -lTAO_CosEvent_Serv
 Cflags: -I${includedir}
